--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "joi": "^17.11.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
